# gabrielcv

./: .bumpver.toml  .gitignore  LICENSE  README.md  main.py  pyproject.toml
gabrielbaute/: __main__.py
gabrielbaute/cli/: __init__.py  main.py  parser.py  welcome.py
gabrielbaute/cli/commands/: __init__.py  avaiable_commands.py  cmd_about.py  cmd_experience.py  cmd_highlight.py  cmd_json.py  cmd_profile.py  cmd_projects.py  cmd_skills.py  cmd_studies.py  cmd_summary.py  cmd_version.py
gabrielbaute/gabrielcv/: __init__.py  ascii_art.py  banner_ascii.py  profile.py
